--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">딴딴</string>
 
     <string name="not_supported_calories_message">칼로리 수집이 불가한 기기입니다</string>
+    <string name="need_physical_permission_message">신체 활동 권한이 필요합니다.\n권한을 허용하려면 설정 화면으로 이동하세요.</string>
+    <string name="open_setting_page">설정 열기</string>
 </resources>
